--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodeJS",
+  "name": "js",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.0",
+    "node-telegram-bot-api": "^0.56.0",
     "telegraf": "^4.7.0"
   },
   "devDependencies": {
