--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "js",
+  "type": "commonjs",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "type": "commonjs",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
@@ -13,10 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.0",
+    "node-cron": "^3.0.0",
+    "moment-timezone": "^0.5.34",
     "node-telegram-bot-api": "^0.56.0",
+    "nodemon": "^2.0.15",
     "telegraf": "^4.7.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
   }
 }
